# Kurs

./: CMakeLists.txt  adminmenuwindow.cpp  adminmenuwindow.h  adminwindow.cpp  adminwindow.h  checkwindow.cpp  checkwindow.h  main.cpp  mainwindow.cpp  mainwindow.h  map.html  mapbridge.cpp  mapbridge.h  menuwindow.cpp  menuwindow.h  otzivwindow.cpp  otzivwindow.h  profilewindow.cpp  profilewindow.h  regwindow.cpp  regwindow.h  regwindow.ui  resources.qrc
